# perplexity-scrape

./: CHANGELOG.md  README.md  mcp_service.py  pyproject.toml
src/prompts/: __init__.py  academic.py
tests/: test_mcp_tools.py
