[project]
name = "perplexity-mcp"
version = "1.0.0"
description = "MCP server and OpenAI-compatible REST API for Perplexity AI"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "ardzz"}
]
keywords = ["perplexity", "mcp", "openai", "api", "ai"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "master"
upload_to_pypi = false
commit_message = "chore(release): {version}"
tag_format = "v{version}"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "build", "chore", "ci", "docs", "style", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.remote]
type = "github"
token = { env = "GH_TOKEN" }

[tool.semantic_release.publish]
upload_to_vcs_release = true

[tool.semantic_release.changelog]
template_dir = "templates"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
